# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2006 Martin Edenhofer <martin+code@otrs.org>
# --
# $Id: CHANGES,v 1.248 2006-04-06 13:19:08 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --
CVS head
 - (2006/04/06) moved to read any language files located under
    Kernel/Language/xx_*.pm at each request to have any translated words
    e. g. for navigation bar available (Kernel/Language/xx_Custom.pm is
    still used as latest source file)
 - (2006/03/28) added config option to show ticket title in main header
    of frontend (e. g. QueueView, ZoomView and Mailbox)
 - (2006/03/24) moved from "otrs" to "otrs-x.x.x" directory in
    tar.gz / tar.bz download format
 - (2006/03/22) added article free text attrubutes
 - (2006/03/21) moved from Kernel::Output::HTML::Generic to
    Kernel::Output::HTML::Layout - all sub modules localted under
    Kernel/Output/HTML/Layout*.pm will ne loaded automatically
    at runtime
 - (2006/03/20) improved ticket zoom to shown attachments with
    html title about attachment info (name, size, ...)
 - (2006/03/20) added use of current config values in admin sysconfig
    fulltext search
 - (2006/03/11) fixed some spelling mistakes for the English original in
    language templates and language files
 - (2006/03/10) added admin init (Kernel/Modules/AdminInit.pm) to init
    config files .xml->.pm after a new setup (after inital root login)
 - (2006/03/04) splited Kernel::Modules::AgentTicketPhone into
    two modules Kernel::Modules::AgentTicketPhone and
    Kernel::Modules::AgentTicketPhoneOutbound (phone calls for existing
    tickets) also templates are renamed!
 - (2006/03/04) cleanup for ticket event names (added compat mode):
    TicketCreate, TicketDelete, TicketTitleUpdate, TicketUnlockTimeoutUpdate,